// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useContextMenu > Read-only mode > should return the correct actions when right clicking a Node 1`] = `
[
  {
    "id": "open",
    "label": "Open node...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": true,
    "id": "execute",
    "label": "Test node",
  },
  {
    "disabled": true,
    "id": "rename",
    "label": "Rename node",
    "shortcut": {
      "keys": [
        "F2",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_activation",
    "label": "Deactivate node",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin node",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy node",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate node",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": true,
    "divided": true,
    "id": "delete",
    "label": "Delete node",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > Read-only mode > should return the correct actions when right clicking a sticky 1`] = `
[
  {
    "disabled": true,
    "id": "open",
    "label": "Edit sticky note",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": true,
    "id": "change_color",
    "label": "Change color",
  },
  {
    "id": "copy",
    "label": "Copy sticky note",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate sticky note",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": true,
    "divided": true,
    "id": "delete",
    "label": "Delete sticky note",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should return the correct actions opening the menu from the button 1`] = `
[
  {
    "id": "open",
    "label": "Open node...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Test node",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename node",
    "shortcut": {
      "keys": [
        "F2",
      ],
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate node",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin node",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy node",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate node",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete node",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should return the correct actions when right clicking a Node 1`] = `
[
  {
    "id": "open",
    "label": "Open node...",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "execute",
    "label": "Test node",
  },
  {
    "disabled": false,
    "id": "rename",
    "label": "Rename node",
    "shortcut": {
      "keys": [
        "F2",
      ],
    },
  },
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate node",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin node",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy node",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate node",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete node",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should return the correct actions when right clicking a sticky 1`] = `
[
  {
    "disabled": false,
    "id": "open",
    "label": "Edit sticky note",
    "shortcut": {
      "keys": [
        "↵",
      ],
    },
  },
  {
    "disabled": false,
    "id": "change_color",
    "label": "Change color",
  },
  {
    "id": "copy",
    "label": "Copy sticky note",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate sticky note",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete sticky note",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;

exports[`useContextMenu > should support opening and closing (default = right click on canvas) 1`] = `
[
  {
    "disabled": false,
    "id": "toggle_activation",
    "label": "Deactivate 2 nodes",
    "shortcut": {
      "keys": [
        "D",
      ],
    },
  },
  {
    "disabled": true,
    "id": "toggle_pin",
    "label": "Pin 2 nodes",
    "shortcut": {
      "keys": [
        "p",
      ],
    },
  },
  {
    "id": "copy",
    "label": "Copy 2 nodes",
    "shortcut": {
      "keys": [
        "C",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": true,
    "id": "duplicate",
    "label": "Duplicate 2 nodes",
    "shortcut": {
      "keys": [
        "D",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "divided": true,
    "id": "select_all",
    "label": "Select all",
    "shortcut": {
      "keys": [
        "A",
      ],
      "metaKey": true,
    },
  },
  {
    "disabled": false,
    "id": "deselect_all",
    "label": "Clear selection",
  },
  {
    "disabled": false,
    "divided": true,
    "id": "delete",
    "label": "Delete 2 nodes",
    "shortcut": {
      "keys": [
        "Del",
      ],
    },
  },
]
`;
